Fixed about page on mobile, added pic

--- a/style.css
+++ b/style.css
@@ -174,6 +174,25 @@ a:hover{
    width: 100%;
 }
 
+.intro-pic-about{
+   position: absolute;
+   left: 50%;
+   top:0;
+   transform: translateX(-50%);
+   width: 250px;
+   height: 250px;
+}
+.intro-pic-about img{
+   width: 100%;
+}
+
+.about-container{
+
+}
+.about-nav{
+   margin-top: 40vh;
+}
+
 
 
 
@@ -206,20 +225,21 @@ a:hover{
       width: 300px;
    }
    .custom-nav{
-      transform: translateX(0);
-      left: 0;
+      transform: translateX(-50%);
+      left: 50%;
       padding: 0;
       margin: 60% 0 0 0;
-      width: 100%;
+      width: 60%;
+      border-radius: 50px;
    }
    .custom-nav a{
-      border-radius: 0;
-      width: 50%;
+      border-radius: 20px 20px 0 0;
+      width: 48%;
    }
    .custom-nav a:hover{
       color: #6D6875;
       background-color: #FFB4A2;
-      border-radius: 0;
+      border-radius: 20px 20px 0 0;
    }
    .container{
       width: 100%;
